@@ -1,3 +1,8 @@
+2013-06-22  Torbjorn Granlund  <tege@gmplib.org>
+
+	* aorslshC_n.asm, aorslsh2_n.asm, aorslsh1_n.asm: Remove.
+	* aorsorrlshC_n.asm, aorsorrlsh1_n.asm, aorsorrlsh2_n.asm: New files.
+
 2013-06-19  Torbjorn Granlund  <tege@gmplib.org>
 
 	* mpn/powerpc64/p6/lshift.asm: Rewrite switching-into-loop code.
